--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
   animated_text_kit: ^4.2.2
+  image_picker: ^1.0.6
 
 dev_dependencies:
   flutter_test:
