--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cached_network_image: ^3.3.0
   animated_text_kit: ^4.2.2
   image_picker: ^1.0.6
+  geolocator: ^10.1.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
