--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^1.0.6
   geolocator: ^10.1.0
   fluttertoast: ^8.2.4
+  firebase_auth: ^3.4.0
+  firebase_core: ^1.19.0
 
 
 dev_dependencies:
