--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   image_picker: ^1.0.6
   geolocator: ^10.1.0
   fluttertoast: ^8.2.4
-  firebase_auth: ^3.4.0
-  firebase_core: ^1.19.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
 
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: 2.3.7
+  flutter_native_splash: ^2.3.9
 
 flutter icons:
   android: true
